--- a/src/app/settings/components/settings-sound/settings-sound.component.scss
+++ b/src/app/settings/components/settings-sound/settings-sound.component.scss
@@ -110,6 +110,7 @@ section {
 
   @media (max-width: 900px) {
     max-width: 110px;
+    min-width: 95px;
     padding: 8px;
   }
 }
